--- a/src/app/components/todos/todos.component.html
+++ b/src/app/components/todos/todos.component.html
@@ -1,7 +1,9 @@
-<app-add-todo (addTodo)="addTodo($event)"></app-add-todo>
-<app-todo-item
+<div class="container">
+  <app-add-todo (addTodo)="addTodo($event)"></app-add-todo>
+  <app-todo-item
   *ngFor="let todo of todos"
   [todo]="todo"
   (deleteTodo)="deleteTodo($event)"
   >
-</app-todo-item>
+  </app-todo-item>
+</div>
